# multi-agent-credit-desk

./: .env.example  AGENTS.md  Dockerfile  README.md  pyproject.toml
.claude/: settings.json  statusline.py
.claude/agents/: architecture-reviewer.md  python-implementer.md  quality-verifier.md
.claude/hooks/: protect_sensitive_files.py  validate_bash.py
.claude/rules/: architecture.md  credit-core.md  python-imports.md  python.md  security-privacy.md
.claude/skills/quality-gate/: SKILL.md
.github/workflows/: quality.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  LLM_OBSERVABILITY.md  PRIVACY.md  architecture-blueprint.md
docs/adr/: 0002-domain-credit-desk-vs-ai-change-guardian.md  0003-monorepo-with-extracted-libraries.md  0004-three-separated-routing-layers.md  0005-policy-based-deterministic-router-mvp.md  0006-observability-otel-fanout-datadog-langfuse.md  0007-telemetry-without-sensitive-content.md  0008-deterministic-core-without-llm.md  0009-reuse-existing-mcp-servers.md  0010-claude-code-harness-as-base.md  0011-policy-mcp-sources-credit-core-policy-directly.md  0012-decisao-agent-sources-credit-core-evaluation-directly.md  0013-decisao-agent-adopts-a2a-sdk.md  0014-decisao-agent-drafts-an-optional-llm-opinion-narrative.md  0015-decisao-agent-migrates-to-task-taskupdater.md  0016-cadastral-agent-kyc-screening-policy.md
infra/: docker-compose.yml
infra/litellm/: config.yaml
infra/otel/: collector.datadog.yaml  collector.yaml
scripts/: validate_architecture.py
services/bureau-mcp/: README.md  pyproject.toml
services/bureau-mcp/src/bureau_mcp/: __init__.py  __main__.py
services/bureau-mcp/src/bureau_mcp/adapters/: __init__.py  synthetic_bureau_source.py
services/bureau-mcp/src/bureau_mcp/application/: __init__.py  ports.py  queries.py
services/bureau-mcp/src/bureau_mcp/domain/: __init__.py  cnpj.py  errors.py  report.py
services/bureau-mcp/src/bureau_mcp/entrypoints/: __init__.py  __main__.py  schemas.py  server.py
services/bureau-mcp/tests/contract/: test_bureau_mcp_tool_contract.py
services/bureau-mcp/tests/integration/: test_bureau_server_stdio_roundtrip.py
services/bureau-mcp/tests/unit/: test_bureau_report_queries.py  test_bureau_schemas.py  test_cnpj_domain.py  test_report_domain.py  test_synthetic_bureau_source.py
services/cadastral-agent/: README.md  pyproject.toml
services/cadastral-agent/src/cadastral_agent/: __init__.py  __main__.py
services/cadastral-agent/src/cadastral_agent/adapters/: __init__.py  bureau_mcp_client.py
services/cadastral-agent/src/cadastral_agent/application/: __init__.py  assess.py  ports.py
services/cadastral-agent/src/cadastral_agent/domain/: __init__.py  assessment.py  bureau_finding.py  errors.py  kyc_policy.py
services/cadastral-agent/src/cadastral_agent/entrypoints/: __init__.py  __main__.py  errors.py  schemas.py
services/cadastral-agent/tests/integration/: test_bureau_mcp_client_failure_modes.py  test_cadastral_agent_cli_stdio_roundtrip.py
services/cadastral-agent/tests/unit/: test_assess.py  test_bureau_mcp_client.py  test_cadastral_agent_architecture_boundary.py  test_cadastral_agent_schemas.py  test_kyc_policy.py
services/decisao-agent/: README.md  pyproject.toml
services/decisao-agent/src/decisao_agent/: __init__.py  __main__.py
services/decisao-agent/src/decisao_agent/adapters/: __init__.py  credit_core_evaluation_adapter.py  litellm_client.py  model_router_client.py  policy_mcp_client.py
services/decisao-agent/src/decisao_agent/application/: __init__.py  evaluate.py  ports.py
services/decisao-agent/src/decisao_agent/domain/: __init__.py  errors.py  opinion.py  snapshot.py
services/decisao-agent/src/decisao_agent/entrypoints/: __init__.py  __main__.py  a2a_executor.py  a2a_server.py  agent_card.py  errors.py  schemas.py
services/decisao-agent/tests/contract/: test_a2a_message_contract.py
services/decisao-agent/tests/integration/: test_decisao_agent_a2a_server_roundtrip.py  test_decisao_agent_cli_stdio_roundtrip.py  test_model_router_client_live.py  test_policy_mcp_client_failure_modes.py
services/decisao-agent/tests/unit/: test_a2a_executor.py  test_agent_card.py  test_credit_core_evaluation_adapter.py  test_decisao_agent_architecture_boundary.py  test_decisao_agent_schemas.py  test_evaluate.py  test_litellm_client.py  test_model_router_client.py  test_opinion_domain.py  test_policy_mcp_client.py  test_snapshot_domain.py
services/policy-mcp/: README.md  pyproject.toml
services/policy-mcp/src/policy_mcp/: __init__.py  __main__.py
services/policy-mcp/src/policy_mcp/adapters/: __init__.py  credit_core_policy_source.py
services/policy-mcp/src/policy_mcp/application/: __init__.py  ports.py  queries.py
services/policy-mcp/src/policy_mcp/domain/: __init__.py  catalog.py  errors.py
services/policy-mcp/src/policy_mcp/entrypoints/: __init__.py  __main__.py  schemas.py  server.py
services/policy-mcp/tests/contract/: test_mcp_tool_contract.py
services/policy-mcp/tests/integration/: test_server_stdio_roundtrip.py
services/policy-mcp/tests/unit/: test_architecture_boundary.py  test_catalog_domain.py  test_credit_core_policy_source.py  test_queries.py  test_schemas.py
src/multi_agent_credit_desk/: __init__.py
tests/integration/: test_otel_collector_langfuse.py
tests/unit/: test_a2a_otel_kit_pin.py  test_litellm_config.py  test_logging.py  test_package.py  test_tracing.py  test_validate_architecture.py
