[project]
name = "multi-agent-credit-desk"
version = "0.1.0"
description = "Virtual uv workspace coordinator for the Multi-Agent Credit Desk. Holds no application code; see packages/contracts and packages/credit-core."
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "a2a-otel-kit==0.4.2",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*", "services/*"]

[dependency-groups]
dev = [
    "bandit[toml]>=1.8",
    "mypy>=1.16",
    "pip-audit>=2.9",
    "pytest>=8.4",
    "pytest-cov>=6.2",
    "pyyaml>=6.0",
    "ruff>=0.12",
    "types-pyyaml>=6.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = [
    "packages/contracts/src",
    "packages/contracts/tests",
    "packages/credit-core/src",
    "packages/credit-core/tests",
    "services/policy-mcp/src",
    "services/policy-mcp/tests",
    "services/bureau-mcp/src",
    "services/bureau-mcp/tests",
    "services/decisao-agent/src",
    "services/decisao-agent/tests",
    "services/cadastral-agent/src",
    "services/cadastral-agent/tests",
    "tests",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "C4",
    "SIM",
    "RUF",
    "ANN",
    "D",
    "S",
]
ignore = [
    "ANN401", # Any is handled as an architecture concern and reviewed explicitly.
    "D203",   # Incompatible with D211.
    "D213",   # Google style uses D212.
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "S101", "ANN"]
"packages/*/tests/**/*.py" = ["D", "S101", "ANN"]
"services/*/tests/**/*.py" = ["D", "S101", "ANN"]
"scripts/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
mypy_path = "packages/contracts/src:packages/credit-core/src:services/policy-mcp/src:services/bureau-mcp/src:services/decisao-agent/src:services/cadastral-agent/src"

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -m 'not integration' --cov=packages/contracts/src/credit_desk_contracts --cov=packages/credit-core/src/credit_core --cov=services/policy-mcp/src/policy_mcp --cov=services/bureau-mcp/src/bureau_mcp --cov=services/decisao-agent/src/decisao_agent --cov=services/cadastral-agent/src/cadastral_agent --cov-report=term-missing"
testpaths = ["tests", "packages/contracts/tests", "packages/credit-core/tests", "services/policy-mcp/tests", "services/bureau-mcp/tests", "services/decisao-agent/tests", "services/cadastral-agent/tests"]
markers = [
    "integration: tests that require real infrastructure",
    "contract: tests that verify an interface contract",
    "e2e: critical end-to-end tests",
]

[tool.coverage.run]
branch = true
source = [
    "packages/contracts/src/credit_desk_contracts",
    "packages/credit-core/src/credit_core",
    "services/policy-mcp/src/policy_mcp",
    "services/bureau-mcp/src/bureau_mcp",
    "services/decisao-agent/src/decisao_agent",
    "services/cadastral-agent/src/cadastral_agent",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[tool.bandit]
exclude_dirs = [
    "tests",
    "packages/contracts/tests",
    "packages/credit-core/tests",
    "services/policy-mcp/tests",
    "services/bureau-mcp/tests",
    "services/decisao-agent/tests",
    "services/cadastral-agent/tests",
]
skips = []
