[project]
name = "bureau-mcp"
version = "0.1.0"
description = "Read-only MCP server exposing a synthetic credit-bureau report catalog."
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "mcp>=1.28,<2",
    "pydantic>=2.9,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bureau_mcp"]
