[project]
name = "decisao-agent"
version = "0.1.0"
description = "Executes the deterministic credit-core evaluation and cross-checks it against policy-mcp."
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "credit-core",
    "credit-desk-contracts",
    "policy-mcp",
    "a2a-sdk[http-server]>=1.1,<2",
    "anyio>=4.14,<5",
    "httpx>=0.28,<1",
    "mcp>=1.28,<2",
    "pydantic>=2.9,<3",
]

[tool.uv.sources]
credit-core = { workspace = true }
credit-desk-contracts = { workspace = true }
policy-mcp = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/decisao_agent"]
