[project]
name = "policy-mcp"
version = "0.1.0"
description = "Read-only MCP server exposing a versioned catalog of the credit_core policy."
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "credit-core",
    "mcp>=1.28,<2",
    "pydantic>=2.9,<3",
]

[tool.uv.sources]
credit-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/policy_mcp"]
